fix(ecp): complete admin login redirect
